--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,10 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-core</artifactId>
+		</dependency>
     </dependencies>
 
 	<build>
