--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost:3306/myHiber
+spring.datasource.url = jdbc:mysql://localhost:3306/myhiber
 spring.datasource.username = root
-spring.datasource.password = Shagu@2001
+spring.datasource.password = root
+spring.flyway.baselineOnMigrate = true 
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-server.port = 9990
+server.port = 8080
